--- a/cointrade/conf/application.conf
+++ b/cointrade/conf/application.conf
@@ -1,1 +1,6 @@
 play.filters.disabled+=play.filters.hosts.AllowedHostsFilter
+
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/cointrade"
+db.default.username=cointrade
+db.default.password="cointrade"
