--- a/cointrade/conf/application.conf
+++ b/cointrade/conf/application.conf
@@ -4,3 +4,6 @@ db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/cointrade"
 db.default.username=cointrade
 db.default.password="cointrade"
+ebean.default = ["models.*"]
+applyEvolutions.default=false
+play.evolutions.enabled=false
