--- a/cointrade/conf/application.conf
+++ b/cointrade/conf/application.conf
@@ -1,7 +1,7 @@
 play.filters.disabled+=play.filters.hosts.AllowedHostsFilter
 
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/cointrade"
+db.default.url="jdbc:mysql://cointrade.cq3ccmglzjnt.us-east-2.rds.amazonaws.com/cointrade"
 db.default.username=cointrade
 db.default.password="cointrade"
 ebean.default = ["models.*"]
