--- a/cointrade/conf/application.conf
+++ b/cointrade/conf/application.conf
@@ -7,3 +7,7 @@ db.default.password="cointrade"
 ebean.default = ["models.*"]
 applyEvolutions.default=false
 play.evolutions.enabled=false
+play.assets {
+  path = "/public"
+  urlPrefix = "/assets"
+}
